# VideoServer

./: .gitignore  CMakeLists.txt  readme.md  workLog.md
src/: CMakeLists.txt
src/base/: AppInfo.cpp  AppInfo.h  CMakeLists.txt  Config.cpp  Config.h  DomainInfo.cpp  DomainInfo.h  FileLog.cpp  FileLog.h  FileMg.cpp  FileMg.h  LogStream.cpp  LogStream.h  Logger.cpp  Logger.h  NoCopyable.h  Singleton.h  StringUtils.cpp  StringUtils.h  TTime.cpp  TTime.h  Task.cpp  Task.h  TaskMg.cpp  TaskMg.h  TestBase.cpp
src/live/: CMakeLists.txt  CodecHeader.cpp  CodecHeader.h  GopMgr.cpp  GopMgr.h  LiveService.cpp  LiveService.h  PlayerUser.cpp  PlayerUser.h  PublishUser.h  RtmpPlayUser.cpp  RtmpPlayUser.h  Session.cpp  Session.h  Stream.cpp  Stream.h  User.cpp  User.h
src/main/: CMakeLists.txt  main.cpp
src/mmedia/: CMakeLists.txt
src/mmedia/base/: BytesReader.cpp  BytesReader.h  BytesWriter.cpp  BytesWriter.h  MMediaCallBack.h  MMediaHandler.h  MMediaLog.h  Packet.cpp  Packet.h
src/mmedia/rtmp/: RtmpCallBack.h  RtmpClient.cpp  RtmpClient.h  RtmpContext.cpp  RtmpContext.h  RtmpHandler.h  RtmpHandshake.cpp  RtmpHandshake.h  RtmpHeader.h  RtmpServer.cpp  RtmpServer.h
src/mmedia/rtmp/amf/: AMFAny.cpp  AMFAny.h  AMFBoolean.cpp  AMFBoolean.h  AMFDate.cpp  AMFDate.h  AMFLongString.cpp  AMFLongString.h  AMFNull.cpp  AMFNull.h  AMFNumber.cpp  AMFNumber.h  AMFObject.cpp  AMFObject.h  AMFString.cpp  AMFString.h
src/mmedia/tests/: CMakeLists.txt  HandsakeClientTest.cpp  HandsakeServerTest.cpp  RtmpClientTest.cpp  RtmpServerTest.cpp
src/network/: CMakeLists.txt  DnsService.cpp  (+11 more)
(+47 files in other folders)
